--- a/src/Components/FloatingButton/index.module.css
+++ b/src/Components/FloatingButton/index.module.css
@@ -7,15 +7,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 99999;
+  z-index: var(--zindex9999);
   cursor: pointer;
   font-size: 2rem;
   font-weight: bolder;
   border-radius: 50%;
   box-shadow: var(--shadow-elevation-medium);
-  background-color: blue;
+  background-color: var(--blue);
   border: 0;
   color: white;
+  outline-offset: 4px;
 }
 .floating__button:hover {
 }
