--- a/src/Components/SearchBar/index.module.css
+++ b/src/Components/SearchBar/index.module.css
@@ -1,24 +1,3 @@
-.search {
-  border-radius: 1rem;
-  width: 80%;
-  display: inline-block;
-}
-.inner__wrapper {
-  border-radius: inherit;
-  position: relative;
-  width: 100%;
-  background-color: white;
-  padding-right: 3em;
-}
-.search input {
-  border: 0;
-  outline: 0;
-  line-height: 1.5rem;
-  width: 100%;
-  height: 100%;
-  padding: 0.5em;
-  border-radius: 1rem;
-}
 .end-adornment {
   cursor: pointer;
   border: 0;
@@ -31,16 +10,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 3em;
+  width: 3rem;
   height: 100%;
-  border-radius: 0 1rem 1rem 0;
-}
-.error {
-  font-size: 0.8em;
-  font-weight: 500;
-  color: red;
-  text-align: left;
-  padding: 0.5em 1.5em;
+  border-radius: 0 var(--radius-md) var(--radius-md) 0;
 }
 .end-adornment:hover {
   opacity: 0.8;
